Start the development

--- a/optimset.bib
+++ b/optimset.bib
@@ -80,7 +80,7 @@
 }
 
 @article{Kolda_Lewis_Torczon_2003,
-    title        = {Optimization by direct search: New perspectives on some classical and modern methods},
+    title        = {Optimization by direct search: new perspectives on some classical and modern methods},
     author       = {Kolda, T. G. and Lewis, R. M. and Torczon, V.},
     year         = 2003,
     journal      = {SIAM Rev.},
@@ -171,10 +171,34 @@
     school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
 }
 
+@misc{Ragonneau_Zhang_2023,
+    title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
+    author       = {Ragonneau, T. M. and Zhang, Z.},
+    year         = 2023,
+    howpublished = {\url{https://www.cobyqa.com/}},
+}
+
 @inproceedings{Wild_2008,
     title        = {{MNH}: a derivative-free optimization algorithm using minimal norm {Hessians}},
     author       = {Wild, S. M.},
     year         = 2008,
     booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
+}
+
+@article{Dennis_Schnabel_1979,
+    author       = {Dennis, Jr., J. E. and Schnabel, R. B.},
+    title        = {Least change secant updates for quasi-{Newton} methods},
+    journal = {SIAM Rev.},
+    volume       = {4},
+    pages        = {443--459},
+    year         = {1979},
+}
+
+@book{Conn_Gould_Toint_2000,
+    author    = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
+    title     = {Trust-Region Methods},
+    series    = {MPS-SIAM Ser. Optim.},
+    publisher = {SIAM},
+    year      = {2000},
 }
 
