Structure the main content of the paper

--- a/optimset.bib
+++ b/optimset.bib
@@ -171,6 +171,13 @@
     school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
 }
 
+@phdthesis{Zhang_2012,
+    title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
+    author       = {Zhang, Z.},
+    year         = 2012,
+    school       = {Chinese Academy of Sciences}
+}
+
 @misc{Ragonneau_Zhang_2023,
     title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
@@ -200,5 +207,14 @@
     series    = {MPS-SIAM Ser. Optim.},
     publisher = {SIAM},
     year      = {2000},
+}
+
+@article{Powell_2013,
+    title        = {Beyond symmetric {Broyden} for updating quadratic models in minimization without derivatives},
+    author       = {Powell, M. J. D.},
+    year         = 2013,
+    journal      = {Math. Program.},
+    volume       = 138,
+    pages        = {475--500}
 }
 
