--- a/optimset.tex
+++ b/optimset.tex
@@ -48,7 +48,6 @@
 
 % Mathematics
 \usepackage{mathtools}
-\usepackage{amsthm}
 \usepackage[bb=dsfontserif]{mathalfa}
 \numberwithin{equation}{section}
 
@@ -87,8 +86,21 @@
 \input{ushyphex}
 
 % Mathematical environments (theorems, proofs, ...)
+\usepackage{amsthm}
+\usepackage{mdframed}
+\mdfdefinestyle{defaultstyle}{
+    bottomline=false,
+    innertopmargin=0pt,
+    innerrightmargin=0pt,
+    linecolor=gray,
+    linewidth=1pt,
+    rightline=false,
+    rightmargin=0pt,
+    topline=false,
+}
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[section]
+\surroundwithmdframed[style=defaultstyle]{definition}
 
 % Control sequences, macros, and definitions
 \usepackage{etoolbox}
@@ -165,7 +177,7 @@ These methods maintain an interpolation set~$\xpt[k] \subseteq \R^n$, where~$k$ 
 \end{equation}
 % Note that the methods must ensure that the interpolation conditions~\eqref{eq:intp-cond} do not contradict each others.
 We assume in what follows that the models~$\objm[k]$ are quadratic, and we denote by~$\qpoly$ the space of quadratic polynomials.
-Such models are often employed in practice, for example by \solvername{uobyqa}~\cite{Powell_2002}, \solvername{newuoa}~\cite{Powell_2006}, \solvername{bobyqa}~\cite{Powell_2009}, \solvername{lincoa}, \solvername{mnh}~\cite{Wild_2008}, and \solvername{cobyqa}~\cite{Ragonneau_2022,Ragonneau_Zhang_2023}.
+Such models are often employed in practice, for example by \solvername{uobyqa}~\cite{Powell_2002}, \solvername{newuoa}~\cite{Powell_2006}, \solvername{bobyqa}~\cite{Powell_2009}, \solvername{lincoa}, \solvername{mnh}, and \solvername{cobyqa}.
 Clearly, if the interpolation conditions~\eqref{eq:intp-cond} do not contradict each others and
 \begin{equation*}
     \card\xpt[k] = \dim\qpoly = \frac{1}{2} (n + 1) (n + 2),
@@ -196,93 +208,150 @@ where~$\norm{\cdot}_{\mathsf{F}}$ denotes the Frobenius norm, and \solvername{ne
 \end{equation}
 with~$\objm[-1] = 0$.
 The latter functional is inspired by least-change property of quasi-Newton updates~\cite{Dennis_Schnabel_1979}.
-Moreover, these two underdetermined interpolation scheme assume that
+The variational problem defined by~\eqref{eq:intp-var} and~\eqref{eq:df-psb} is known as the \emph{derivative-free symmetric Broyden update} (see~\cite{Powell_2013},~\cite[\S~3.6]{Zhang_2012}, and~\cite[\S~2.4.2]{Ragonneau_2022}).
+The two underdetermined interpolation schemes assume that
 \begin{equation*}
     n + 1 \le \card(\xpt[k]) \le \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
-Otherwise,~$\objm[k]$ could not be defined uniquely (or even not defined at all).
-In practice, methods that employ these schemes often enforce~$\card(\xpt[k]) \ge n + 2$ as otherwise, all the models~$\objm[k]$ would be linear.
+Otherwise,~$\objm[k]$ could not be uniquely defined (or even not defined at all).
+In practice, methods that employ these schemes often enforce~$\card(\xpt[k]) \ge n + 2$ as all the models~$\objm[k]$ would be linear if~$\card(\xpt[k]) = n + 1$.
 % Quadratic models of~$\con$ can be built in a similar way.
-Moreover, if the constraint functions underlying the feasible set~$\fset$ in~\eqref{eq:nlp} are nonlinear, model-based \gls{dfo} methods usually approximates them using similar techniques.
+Finally, if the constraint functions underlying the feasible set~$\fset$ in~\eqref{eq:nlp} are nonlinear, model-based \gls{dfo} methods usually approximates them using similar techniques.
 
-Interpolation-based \gls{dfo} methods normally recycle points from~$\xpt[k]$ to build~$\xpt[k + 1]$ and avoid performing unnecessary function evaluations.
-For example, only one point differs between~$\xpt[k]$ and~$\xpt[k + 1]$ in Powell's \gls{dfo} methods and \solvername{cobyqa} usually.
-It is clear that the initial interpolation set~$\xpt[0]$ must be carefully chosen, as it will impact the optimization method for many iterations.
-This paper shows that the default initial interpolation set employed by Powell's \gls{dfo} methods and \solvername{cobyqa} is optimal when building~$\objm[0]$ by~\eqref{eq:intp-var} and either~\eqref{eq:mnh} or~\eqref{eq:df-psb}, as they are equivalent at the first iteration.
+Normally, interpolation-based \gls{dfo} methods do not build the interpolation point~$\xpt[k]$ \emph{ab initio} at each iteration.
+Instead, they build an initial interpolation set~$\xpt[0]$ and then  update~$\xpt[k]$ to build~$\xpt[k + 1]$.
+For example, only one point differs between~$\xpt[k]$ and~$\xpt[k + 1]$ in Powell's \gls{dfo} methods and \solvername{cobyqa} during usual iterations.
+This mechanism prevents the methods from performing unnecessary function evaluations, which are often considered as the principal measure of complexity of \gls{dfo} methods.
+However, it is clear that the initial interpolation set~$\xpt[0]$ must be carefully chosen, as it will impact the optimization method for many iterations.
+In the unconstrained case, i.e., when~$\fset = \R^n$ in~\eqref{eq:nlp}, Powell proposed an initial interpolation set~$\xpt[0]$ that is employed by many interpolation-based \gls{dfo} methods, including \solvername{uobyqa}, \solvername{newuoa}, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
+This paper shows that this interpolation set is optimal in a well-poisedness sense detailed in Section~\ref{sec:well-poisedness}.
 
 This paper is organized as follows.\fxnote{Write down the organization of the paper}
 
-\section{Optimality of an initial interpolation set}
+\section{Well-poisedness of interpolation sets}
+\label{sec:well-poisedness}
 
-In what follows, we present an initial interpolation set and its optimality in a sense describe in Section~\ref{subsec:well-poisedness}.
-
-\subsection{Description of the initial interpolation sets}
-
-The initial interpolation set we consider in this paper is defined as follows.
-Let~$\Delta > 0$ be fixed and for~$i \in \set{1, 2, \dots, 2n + 1}$, let~$y^i \in \R^n$ be
+In this section, we denote by
 \begin{equation*}
-    y^i =
-    \begin{cases}
-        0,                      & \text{if} ~ i = 1,\\
-        \Delta e_{i - 1},       & \text{if} ~ 2 \le i \le n + 1,\\
-        -\Delta e_{i - n - 1},  & \text{otherwise},
-    \end{cases}
+    \xpt = \set{y^1, y^2, \dots, y^m} \subseteq \R^n,
 \end{equation*}
-where~$e_i \in \R^n$ denotes the $i$th standard coordinate vector.
-We then define the initial interpolation sets~$\xpt[0]_m \subseteq \R^n$ for each~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$ by
-\begin{equation*}
-    \xpt[0]_m = \set{y^1, y^2, \dots, y^m}.
-\end{equation*}
-Under these notations, the interpolation conditions~\eqref{eq:intp-cond} provide
+a set, and we interpolate the objective function~$\obj$ by a quadratic polynomial~$\objm$ on~$\xpt$, i.e.,
 \begin{equation}
-    \label{eq:intp-cond-0}
-    \objm[0](y^i) = \obj(y^i), \quad i \in \set{1, 2, \dots, m}.
+    \label{eq:intp-cond-gen}
+    \objm(y^i) = \obj(y^i), \quad i \in \set{1, 2, \dots, m}.
 \end{equation}
-% In the unconstrained case, Powell's \gls{dfo} methods and \solvername{cobyqa} use the initial interpolation set~$\xpt[0] = \xpt[0]_{2n + 1}$, i.e., they employ the value~$m = 2n + 1$ by default.
-% This is natural, as the corresponding initial interpolation set is appealing.
-% This paper shows that the value~$m = 2n + 1$ is indeed optimal in a sense described in the following section.
+More precisely, we let~$\objm$ solve~\eqref{eq:intp-var}, where~$\mathcal{F}^k$ is defined by~\eqref{eq:mnh}.
+Note that if~$\xpt$ is seen as an initial interpolation set~$\xpt[0]$, then~$\objm$ denotes the initial model~$\objm[0]$, and the functional~$\mathcal{F}^k = \mathcal{F}^0$ is equivalent to the one defined by~\eqref{eq:df-psb}.
+In other words,~$\objm$ is also obtained by the derivative-free symmetric Broyden update.
+The following definition guarantees that the interpolation problem is always well-posed.
 
-\subsection{Well-poisedness of interpolation sets}
-\label{subsec:well-poisedness}
+\begin{definition}[Poisedness]
+    The set~$\xpt$ is \emph{poised} in the minimum Frobenius norm sense if the solution to problem~\eqref{eq:intp-var} exists and is unique for any real-valued function~$\obj$.
+\end{definition}
 
-In this part, we fix an~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$.
-We will study properties of the initial interpolation set~$\xpt[0]_m$ in $\mathcal{B}_p(\Delta)$, the~$\ell_p$-norm ball of radius~$\Delta$, for~$p \in [1, \infty]$.
-Note that we allow~$p = \infty$.
-It is natural to focus on this region.
-Indeed, the initial interpolation set is contained in~$\mathcal{B}_p(\Delta)$ and more importantly, this is the region of interest when employing the initial interpolation set~$\xpt[0]_m$ in a trust-region framework.\fxnote{Introduce the trust-region framework before.}
+As we mentioned earlier, a necessary condition for~$\xpt$ to be poised is
+\begin{equation*}
+    n + 1 \le m \le \frac{1}{2} (n + 1) (n + 2).
+\end{equation*}
+Moreover, observe that the KKT system for the variational problem~\eqref{eq:intp-var} is linear with respect to the coefficient of~$\objm$.
+Hence, the poisedness of~$\xpt$ is related to the nonsingularity of the coefficient matrix of this KKT system.
+Intuitively, the interpolation set~$\xpt$ can be said well-poised if the determinant of this matrix is large enough.
+To formalize this intuition, we first introduce the notion of minimum Frobenius norm Lagrange polynomials.
 
-We first introduce the concept of minimum Frobenius norm Lagrange polynomials associated with the interpolation conditions~\eqref{eq:intp-cond-0}.
+\subsection{Minimum Frobenius norm Lagrange polynomials}
+
+We assume that the interpolation set~$\xpt$ is poised.
+To formally define a measure of well-poisedness of~$\xpt$, we first need to extend the classical definition of the Lagrange polynomials as follows.
 
 \begin{definition}[Minimum Frobenius norm Lagrange polynomials]
-    For each~$i \in \set{1, 2, \dots, m}$, the~$i$th minimum Frobenius norm Lagrange polynomial~$\lagp[i]$ for the interpolation problem~\eqref{eq:intp-cond-0} is the unique quadratic polynomial that solves
+    \label{def:min-norm-lagp}
+    For each~$i \in \set{1, 2, \dots, m}$, the~$i$th minimum Frobenius norm Lagrange polynomial~$\lagp[i]$ for the interpolation problem~\eqref{eq:intp-cond-gen} is the unique quadratic polynomial solving
     \begin{equation*}
         \begin{aligned}
             \min_{Q \in \qpoly} & \quad \norm{\nabla^2 Q}_{\mathsf{F}}\\
-            \text{s.t.}         & \quad Q(y^j) = \delta_{i, j},\\
+            \text{s.t.}         & \quad Q(y^j) = \delta_{i, j}, \quad j \in \set{1, 2, \dots, m},
         \end{aligned}
     \end{equation*}
     where~$\delta_{i, j}$ denotes the Kronecker delta.
 \end{definition}
 
-We now present the notion of~$\Lambda$-poisedness in the minimum Frobenius norm sense.
+Remark that if~$m = (n + 1) (n + 2) / 2$, then Definition~\ref{def:min-norm-lagp} reduces to the classical definition of the Lagrange polynomials.
 
-\begin{definition}[$\Lambda$-poisedness in the minimum Frobenius norm sense~{\cite[Def.~5.6]{Conn_Scheinberg_Vicente_2009}}]
-    An interpolation set~$\xpt[0]_m$ is said to be~$\Lambda$-poised in the minimum Frobenius norm sense in~$\mathcal{B}_p(\Delta)$, for some~$\Lambda > 0$, if
-    \begin{equation*}
-        \Lambda \ge \max_{1 \le i \le m} \max_{\norm{x}_p \le \Delta} \abs{\lagp[i](x)},
-    \end{equation*}
-    where~$\lagp[i]$ denotes the~$i$th minimum Frobenius norm Lagrange polynomials.
-\end{definition}
+\subsection{Well-poisedness in the minimum Frobenius norm sense}
 
-If~$\xpt[0]_m$ is~$\Lambda_0$-poised in the minimum Frobenius norm sense, it is obviously~$\Lambda$-poised in the minimum Frobenius norm sense for all~$\Lambda \ge \Lambda_0$.
-Moreover, one can show that the set~$\xpt[0]_m$ is~$\Lambda$-poised if and only if the condition number of the coefficient matrix of the KKT system of~\eqref{eq:intp-var} (with~$\mathcal{F}^k$ defined by either~\eqref{eq:mnh} or~\eqref{eq:df-psb}) is bounded by some terms proportional to~$\Lambda$~\cite[Thm.~5.8]{Conn_Scheinberg_Vicente_2009}.
-
-
-\subsection{Optimality in the well-poisedness sense}
-
-These methods are trust-region methods and~$\Delta$ represent the initial trust-region radius.
+\section{Optimality of Powell's initial interpolation set}
 
 \section{Conclusion}
+
+% \section{Optimality of an initial interpolation set}
+
+% In what follows, we present an initial interpolation set and its optimality in a sense describe in Subsection~\ref{subsec:well-poisedness}.
+
+% \subsection{Description of the initial interpolation sets}
+
+% The initial interpolation set we consider in this paper is defined as follows.
+% Let~$\Delta > 0$ be fixed and for~$i \in \set{1, 2, \dots, 2n + 1}$, let~$y^i \in \R^n$ be
+% \begin{equation*}
+%     y^i =
+%     \begin{cases}
+%         0,                      & \text{if} ~ i = 1,\\
+%         \Delta e_{i - 1},       & \text{if} ~ 2 \le i \le n + 1,\\
+%         -\Delta e_{i - n - 1},  & \text{otherwise},
+%     \end{cases}
+% \end{equation*}
+% where~$e_i \in \R^n$ denotes the $i$th standard coordinate vector.
+% We then define the initial interpolation sets~$\xpt[0]_m \subseteq \R^n$ for each~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$ by
+% \begin{equation*}
+%     \xpt[0]_m = \set{y^1, y^2, \dots, y^m}.
+% \end{equation*}
+% Under these notations, the interpolation conditions~\eqref{eq:intp-cond} provide
+% \begin{equation}
+%     \label{eq:intp-cond-0}
+%     \objm[0](y^i) = \obj(y^i), \quad i \in \set{1, 2, \dots, m}.
+% \end{equation}
+% % In the unconstrained case, Powell's \gls{dfo} methods and \solvername{cobyqa} use the initial interpolation set~$\xpt[0] = \xpt[0]_{2n + 1}$, i.e., they employ the value~$m = 2n + 1$ by default.
+% % This is natural, as the corresponding initial interpolation set is appealing.
+% % This paper shows that the value~$m = 2n + 1$ is indeed optimal in a sense described in the following section.
+
+% \subsection{Well-poisedness of interpolation sets}
+% \label{subsec:well-poisedness}
+
+% In this part, we fix an~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$.
+% We will study properties of the initial interpolation set~$\xpt[0]_m$ in $\mathcal{B}_p(\Delta)$, the~$\ell_p$-norm ball of radius~$\Delta$, for~$p \in [1, \infty]$.
+% Note that we allow~$p = \infty$.
+% It is natural to focus on this region.
+% Indeed, the initial interpolation set is contained in~$\mathcal{B}_p(\Delta)$ and more importantly, this is the region of interest when employing the initial interpolation set~$\xpt[0]_m$ in a trust-region framework.\fxnote{Introduce the trust-region framework before.}
+
+% We first introduce the concept of minimum Frobenius norm Lagrange polynomials associated with the interpolation conditions~\eqref{eq:intp-cond-0}.
+
+% \begin{definition}[Minimum Frobenius norm Lagrange polynomials]
+%     For each~$i \in \set{1, 2, \dots, m}$, the~$i$th minimum Frobenius norm Lagrange polynomial~$\lagp[i]$ for the interpolation problem~\eqref{eq:intp-cond-0} is the unique quadratic polynomial that solves
+%     \begin{equation*}
+%         \begin{aligned}
+%             \min_{Q \in \qpoly} & \quad \norm{\nabla^2 Q}_{\mathsf{F}}\\
+%             \text{s.t.}         & \quad Q(y^j) = \delta_{i, j},\\
+%         \end{aligned}
+%     \end{equation*}
+%     where~$\delta_{i, j}$ denotes the Kronecker delta.
+% \end{definition}
+
+% We now present the notion of~$\Lambda$-poisedness in the minimum Frobenius norm sense.
+
+% \begin{definition}[$\Lambda$-poisedness in the minimum Frobenius norm sense~{\cite[Def.~5.6]{Conn_Scheinberg_Vicente_2009}}]
+%     An interpolation set~$\xpt[0]_m$ is said to be~$\Lambda$-poised in the minimum Frobenius norm sense in~$\mathcal{B}_p(\Delta)$, for some~$\Lambda > 0$, if
+%     \begin{equation*}
+%         \Lambda \ge \max_{1 \le i \le m} \max_{\norm{x}_p \le \Delta} \abs{\lagp[i](x)},
+%     \end{equation*}
+%     where~$\lagp[i]$ denotes the~$i$th minimum Frobenius norm Lagrange polynomials.
+% \end{definition}
+
+% If~$\xpt[0]_m$ is~$\Lambda_0$-poised in the minimum Frobenius norm sense, it is obviously~$\Lambda$-poised in the minimum Frobenius norm sense for all~$\Lambda \ge \Lambda_0$.
+% Moreover, one can show that the set~$\xpt[0]_m$ is~$\Lambda$-poised if and only if the condition number of the coefficient matrix of the KKT system of~\eqref{eq:intp-var} (with~$\mathcal{F}^k$ defined by either~\eqref{eq:mnh} or~\eqref{eq:df-psb}) is bounded by some terms proportional to~$\Lambda$~\cite[Thm.~5.8]{Conn_Scheinberg_Vicente_2009}.
+
+
+% \subsection{Optimality in the well-poisedness sense}
+
+% These methods are trust-region methods and~$\Delta$ represent the initial trust-region radius.
 
 \bibliographystyle{amsplain}
 \bibliography{\jobname}
